svn/org.cfeclipse.cfml.core/trunk/src/org/cfeclipse/cfml/core/parser/antlr/CFScriptParser.java
// $ANTLR 3.0 ./CFScript.g 2007-06-18 17:05:28

package org.cfeclipse.cfml.core.parser.antlr;

/*
Copyright (c) 2007 Mark Mandel, Mark Drew

Permission is hereby granted, free of charge, to any person obtaining a copy
of this software and associated documentation files (the "Software"), to deal
in the Software without restriction, including without limitation the rights
to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
copies of the Software, and to permit persons to whom the Software is
furnished to do so, subject to the following conditions:

The above copyright notice and this permission notice shall be included in
all copies or substantial portions of the Software.

THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
THE SOFTWARE.	
*/	


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;


import org.antlr.runtime.tree.*;

public class CFScriptParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "FUNCTION_CALL", "STRUCT_KEY", "ELSEIF", "STRING_CFML", "STRING", "SEMI_COLON", "VAR", "EQUALS", "OPEN_PAREN", "CLOSE_PAREN", "RETURN", "OPERATOR", "NOT", "NUMBER", "HASH", "DOT", "DOUBLE_QUOTE", "ESCAPE_DOUBLE_QUOTE", "SINGLE_QUOTE", "ESCAPE_SINGLE_QUOTE", "IDENTIFIER", "OPEN_SQUARE", "CLOSE_SQUARE", "COMMA", "IF", "ELSE", "TRY", "CATCH", "FOR", "WHILE", "DO", "OPEN_CURLY", "CLOSE_CURLY", "SWITCH", "CASE", "COLON", "DEFAULT", "BREAK", "MATH_OPERATOR", "STRING_OPERATOR", "BOOLEAN_OPERATOR", "DIGIT", "LETTER", "WS", "COMMENT", "LINE_COMMENT"
    };
    public static final int WHILE=33;
    public static final int LETTER=46;
    public static final int DOUBLE_QUOTE=20;
    public static final int CLOSE_CURLY=36;
    public static final int CASE=38;
    public static final int FOR=32;
    public static final int DO=34;
    public static final int EQUALS=11;
    public static final int NOT=16;
    public static final int EOF=-1;
    public static final int BREAK=41;
    public static final int IF=28;
    public static final int SINGLE_QUOTE=22;
    public static final int COMMA=27;
    public static final int IDENTIFIER=24;
    public static final int RETURN=14;
    public static final int OPEN_SQUARE=25;
    public static final int ESCAPE_DOUBLE_QUOTE=21;
    public static final int VAR=10;
    public static final int CLOSE_PAREN=13;
    public static final int MATH_OPERATOR=42;
    public static final int DIGIT=45;
    public static final int COMMENT=48;
    public static final int DOT=19;
    public static final int CLOSE_SQUARE=26;
    public static final int STRUCT_KEY=5;
    public static final int LINE_COMMENT=49;
    public static final int STRING_CFML=7;
    public static final int OPERATOR=15;
    public static final int SWITCH=37;
    public static final int ELSE=29;
    public static final int DEFAULT=40;
    public static final int NUMBER=17;
    public static final int HASH=18;
    public static final int OPEN_PAREN=12;
    public static final int SEMI_COLON=9;
    public static final int OPEN_CURLY=35;
    public static final int TRY=30;
    public static final int ESCAPE_SINGLE_QUOTE=23;
    public static final int ELSEIF=6;
    public static final int COLON=39;
    public static final int WS=47;
    public static final int BOOLEAN_OPERATOR=44;
    public static final int CATCH=31;
    public static final int FUNCTION_CALL=4;
    public static final int STRING_OPERATOR=43;
    public static final int STRING=8;

        public CFScriptParser(TokenStream input) {
            super(input);
        }
        
    protected TreeAdaptor adaptor = new CommonTreeAdaptor();

    public void setTreeAdaptor(TreeAdaptor adaptor) {
        this.adaptor = adaptor;
    }
    public TreeAdaptor getTreeAdaptor() {
        return adaptor;
    }

    public String[] getTokenNames() { return tokenNames; }
    public String getGrammarFileName() { return "./CFScript.g"; }


    public static class script_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start script
    // ./CFScript.g:101:1: script : ( ( nonBlockStatement | ifStatement | tryStatement | forStatement | whileStatement | doWhileStatement | switchStatement ) SEMI_COLON )* ;
    public final script_return script() throws RecognitionException {
    traceIn("script", 1);
        script_return retval = new script_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token SEMI_COLON8=null;
        nonBlockStatement_return nonBlockStatement1 = null;

        ifStatement_return ifStatement2 = null;

        tryStatement_return tryStatement3 = null;

        forStatement_return forStatement4 = null;

        whileStatement_return whileStatement5 = null;

        doWhileStatement_return doWhileStatement6 = null;

        switchStatement_return switchStatement7 = null;


        Object SEMI_COLON8_tree=null;

        try {
            // ./CFScript.g:103:2: ( ( ( nonBlockStatement | ifStatement | tryStatement | forStatement | whileStatement | doWhileStatement | switchStatement ) SEMI_COLON )* )
            // ./CFScript.g:103:2: ( ( nonBlockStatement | ifStatement | tryStatement | forStatement | whileStatement | doWhileStatement | switchStatement ) SEMI_COLON )*
            {
            root_0 = (Object)adaptor.nil();

            // ./CFScript.g:103:2: ( ( nonBlockStatement | ifStatement | tryStatement | forStatement | whileStatement | doWhileStatement | switchStatement ) SEMI_COLON )*
            loop2:
            do {
                int alt2=2;
                int LA2_0 = input.LA(1);

                if ( (LA2_0==VAR||LA2_0==OPEN_PAREN||LA2_0==RETURN||(LA2_0>=NOT && LA2_0<=HASH)||LA2_0==DOUBLE_QUOTE||LA2_0==SINGLE_QUOTE||LA2_0==IDENTIFIER||LA2_0==IF||LA2_0==TRY||(LA2_0>=FOR && LA2_0<=DO)||LA2_0==SWITCH||LA2_0==BREAK) ) {
                    alt2=1;
                }


                switch (alt2) {
            	case 1 :
            	    // ./CFScript.g:104:3: ( nonBlockStatement | ifStatement | tryStatement | forStatement | whileStatement | doWhileStatement | switchStatement ) SEMI_COLON
            	    {
            	    // ./CFScript.g:104:3: ( nonBlockStatement | ifStatement | tryStatement | forStatement | whileStatement | doWhileStatement | switchStatement )
            	    int alt1=7;
            	    switch ( input.LA(1) ) {
            	    case VAR:
            	    case OPEN_PAREN:
            	    case RETURN:
            	    case NOT:
            	    case NUMBER:
            	    case HASH:
            	    case DOUBLE_QUOTE:
            	    case SINGLE_QUOTE:
            	    case IDENTIFIER:
            	    case BREAK:
            	        {
            	        alt1=1;
            	        }
            	        break;
            	    case IF:
            	        {
            	        alt1=2;
            	        }
            	        break;
            	    case TRY:
            	        {
            	        alt1=3;
            	        }
            	        break;
            	    case FOR:
            	        {
            	        alt1=4;
            	        }
            	        break;
            	    case WHILE:
            	        {
            	        alt1=5;
            	        }
            	        break;
            	    case DO:
            	        {
            	        alt1=6;
            	        }
            	        break;
            	    case SWITCH:
            	        {
            	        alt1=7;
            	        }
            	        break;
            	    default:
            	        NoViableAltException nvae =
            	            new NoViableAltException("104:3: ( nonBlockStatement | ifStatement | tryStatement | forStatement | whileStatement | doWhileStatement | switchStatement )", 1, 0, input);

            	        throw nvae;
            	    }

            	    switch (alt1) {
            	        case 1 :
            	            // ./CFScript.g:105:4: nonBlockStatement
            	            {
            	            pushFollow(FOLLOW_nonBlockStatement_in_script92);
            	            nonBlockStatement1=nonBlockStatement();
            	            _fsp--;

            	            adaptor.addChild(root_0, nonBlockStatement1.getTree());

            	            }
            	            break;
            	        case 2 :
            	            // ./CFScript.g:107:4: ifStatement
            	            {
            	            pushFollow(FOLLOW_ifStatement_in_script103);
            	            ifStatement2=ifStatement();
            	            _fsp--;

            	            adaptor.addChild(root_0, ifStatement2.getTree());

            	            }
            	            break;
            	        case 3 :
            	            // ./CFScript.g:109:4: tryStatement
            	            {
            	            pushFollow(FOLLOW_tryStatement_in_script113);
            	            tryStatement3=tryStatement();
            	            _fsp--;

            	            adaptor.addChild(root_0, tryStatement3.getTree());

            	            }
            	            break;
            	        case 4 :
            	            // ./CFScript.g:111:4: forStatement
            	            {
            	            pushFollow(FOLLOW_forStatement_in_script123);
            	            forStatement4=forStatement();
            	            _fsp--;

            	            adaptor.addChild(root_0, forStatement4.getTree());

            	            }
            	            break;
            	        case 5 :
            	            // ./CFScript.g:113:4: whileStatement
            	            {
            	            pushFollow(FOLLOW_whileStatement_in_script133);
            	            whileStatement5=whileStatement();
            	            _fsp--;

            	            adaptor.addChild(root_0, whileStatement5.getTree());

            	            }
            	            break;
            	        case 6 :
            	            // ./CFScript.g:115:4: doWhileStatement
            	            {
            	            pushFollow(FOLLOW_doWhileStatement_in_script143);
            	            doWhileStatement6=doWhileStatement();
            	            _fsp--;

            	            adaptor.addChild(root_0, doWhileStatement6.getTree());

            	            }
            	            break;
            	        case 7 :
            	            // ./CFScript.g:117:4: switchStatement
            	            {
            	            pushFollow(FOLLOW_switchStatement_in_script153);
            	            switchStatement7=switchStatement();
            	            _fsp--;

            	            adaptor.addChild(root_0, switchStatement7.getTree());

            	            }
            	            break;

            	    }

            	    SEMI_COLON8=(Token)input.LT(1);
            	    match(input,SEMI_COLON,FOLLOW_SEMI_COLON_in_script159); 
            	    SEMI_COLON8_tree = (Object)adaptor.create(SEMI_COLON8);
            	    adaptor.addChild(root_0, SEMI_COLON8_tree);


            	    }
            	    break;

            	default :
            	    break loop2;
                }
            } while (true);


            }

            retval.stop = input.LT(-1);

                retval.tree = (Object)adaptor.rulePostProcessing(root_0);
                adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
    traceOut("script", 1);
        }
        return retval;
    }
    // $ANTLR end script

    public static class nonBlockStatement_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start nonBlockStatement
    // ./CFScript.g:122:1: nonBlockStatement : ( setStatement | returnStatement | breakStatement );
    public final nonBlockStatement_return nonBlockStatement() throws RecognitionException {
    traceIn("nonBlockStatement", 2);
        nonBlockStatement_return retval = new nonBlockStatement_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        setStatement_return setStatement9 = null;

        returnStatement_return returnStatement10 = null;

        breakStatement_return breakStatement11 = null;



        try {
            // ./CFScript.g:124:2: ( setStatement | returnStatement | breakStatement )
            int alt3=3;
            switch ( input.LA(1) ) {
            case VAR:
            case OPEN_PAREN:
            case NOT:
            case NUMBER:
            case HASH:
            case DOUBLE_QUOTE:
            case SINGLE_QUOTE:
            case IDENTIFIER:
                {
                alt3=1;
                }
                break;
            case RETURN:
                {
                alt3=2;
                }
                break;
            case BREAK:
                {
                alt3=3;
                }
                break;
            default:
                NoViableAltException nvae =
                    new NoViableAltException("122:1: nonBlockStatement : ( setStatement | returnStatement | breakStatement );", 3, 0, input);

                throw nvae;
            }

            switch (alt3) {
                case 1 :
                    // ./CFScript.g:124:2: setStatement
                    {
                    root_0 = (Object)adaptor.nil();

                    pushFollow(FOLLOW_setStatement_in_nonBlockStatement176);
                    setStatement9=setStatement();
                    _fsp--;

                    adaptor.addChild(root_0, setStatement9.getTree());

                    }
                    break;
                case 2 :
                    // ./CFScript.g:126:2: returnStatement
                    {
                    root_0 = (Object)adaptor.nil();

                    pushFollow(FOLLOW_returnStatement_in_nonBlockStatement182);
                    returnStatement10=returnStatement();
                    _fsp--;

                    adaptor.addChild(root_0, returnStatement10.getTree());

                    }
                    break;
                case 3 :
                    // ./CFScript.g:128:2: breakStatement
                    {
                    root_0 = (Object)adaptor.nil();

                    pushFollow(FOLLOW_breakStatement_in_nonBlockStatement188);
                    breakStatement11=breakStatement();
                    _fsp--;

                    adaptor.addChild(root_0, breakStatement11.getTree());

                    }
                    break;

            }
            retval.stop = input.LT(-1);

                retval.tree = (Object)adaptor.rulePostProcessing(root_0);
                adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
    traceOut("nonBlockStatement", 2);
        }
        return retval;
    }
    // $ANTLR end nonBlockStatement

    public static class setStatement_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start setStatement
    // ./CFScript.g:131:1: setStatement : ( VAR )? codeStatement ( EQUALS codeStatement )? ;
    public final setStatement_return setStatement() throws RecognitionException {
    traceIn("setStatement", 3);
        setStatement_return retval = new setStatement_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token VAR12=null;
        Token EQUALS14=null;
        codeStatement_return codeStatement13 = null;

        codeStatement_return codeStatement15 = null;


        Object VAR12_tree=null;
        Object EQUALS14_tree=null;

        try {
            // ./CFScript.g:141:2: ( ( VAR )? codeStatement ( EQUALS codeStatement )? )
            // ./CFScript.g:141:2: ( VAR )? codeStatement ( EQUALS codeStatement )?
            {
            root_0 = (Object)adaptor.nil();

            // ./CFScript.g:141:2: ( VAR )?
            int alt4=2;
            int LA4_0 = input.LA(1);

            if ( (LA4_0==VAR) ) {
                alt4=1;
            }
            switch (alt4) {
                case 1 :
                    // ./CFScript.g:141:3: VAR
                    {
                    VAR12=(Token)input.LT(1);
                    match(input,VAR,FOLLOW_VAR_in_setStatement206); 
                    VAR12_tree = (Object)adaptor.create(VAR12);
                    adaptor.addChild(root_0, VAR12_tree);


                    }
                    break;

            }

            pushFollow(FOLLOW_codeStatement_in_setStatement210);
            codeStatement13=codeStatement();
            _fsp--;

            adaptor.addChild(root_0, codeStatement13.getTree());
            // ./CFScript.g:141:23: ( EQUALS codeStatement )?
            int alt5=2;
            int LA5_0 = input.LA(1);

            if ( (LA5_0==EQUALS) ) {
                alt5=1;
            }
            switch (alt5) {
                case 1 :
                    // ./CFScript.g:141:24: EQUALS codeStatement
                    {
                    EQUALS14=(Token)input.LT(1);
                    match(input,EQUALS,FOLLOW_EQUALS_in_setStatement213); 
                    EQUALS14_tree = (Object)adaptor.create(EQUALS14);
                    adaptor.addChild(root_0, EQUALS14_tree);

                    pushFollow(FOLLOW_codeStatement_in_setStatement215);
                    codeStatement15=codeStatement();
                    _fsp--;

                    adaptor.addChild(root_0, codeStatement15.getTree());

                    }
                    break;

            }


            }

            retval.stop = input.LT(-1);

                retval.tree = (Object)adaptor.rulePostProcessing(root_0);
                adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
    traceOut("setStatement", 3);
        }
        return retval;
    }
    // $ANTLR end setStatement

    public static class codeStatement_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start codeStatement
    // ./CFScript.g:144:1: codeStatement : ( OPEN_PAREN codeStatement CLOSE_PAREN | cfmlBasicStatement ) ;
    public final codeStatement_return codeStatement() throws RecognitionException {
    traceIn("codeStatement", 4);
        codeStatement_return retval = new codeStatement_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token OPEN_PAREN16=null;
        Token CLOSE_PAREN18=null;
        codeStatement_return codeStatement17 = null;

        cfmlBasicStatement_return cfmlBasicStatement19 = null;


        Object OPEN_PAREN16_tree=null;
        Object CLOSE_PAREN18_tree=null;

        try {
            // ./CFScript.g:146:2: ( ( OPEN_PAREN codeStatement CLOSE_PAREN | cfmlBasicStatement ) )
            // ./CFScript.g:146:2: ( OPEN_PAREN codeStatement CLOSE_PAREN | cfmlBasicStatement )
            {
            root_0 = (Object)adaptor.nil();

            // ./CFScript.g:146:2: ( OPEN_PAREN codeStatement CLOSE_PAREN | cfmlBasicStatement )
            int alt6=2;
            int LA6_0 = input.LA(1);

            if ( (LA6_0==OPEN_PAREN) ) {
                alt6=1;
            }
            else if ( ((LA6_0>=NOT && LA6_0<=HASH)||LA6_0==DOUBLE_QUOTE||LA6_0==SINGLE_QUOTE||LA6_0==IDENTIFIER) ) {
                alt6=2;
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("146:2: ( OPEN_PAREN codeStatement CLOSE_PAREN | cfmlBasicStatement )", 6, 0, input);

                throw nvae;
            }
            switch (alt6) {
                case 1 :
                    // ./CFScript.g:147:3: OPEN_PAREN codeStatement CLOSE_PAREN
                    {
                    OPEN_PAREN16=(Token)input.LT(1);
                    match(input,OPEN_PAREN,FOLLOW_OPEN_PAREN_in_codeStatement233); 
                    OPEN_PAREN16_tree = (Object)adaptor.create(OPEN_PAREN16);
                    adaptor.addChild(root_0, OPEN_PAREN16_tree);

                    pushFollow(FOLLOW_codeStatement_in_codeStatement235);
                    codeStatement17=codeStatement();
                    _fsp--;

                    adaptor.addChild(root_0, codeStatement17.getTree());
                    CLOSE_PAREN18=(Token)input.LT(1);
                    match(input,CLOSE_PAREN,FOLLOW_CLOSE_PAREN_in_codeStatement237); 
                    CLOSE_PAREN18_tree = (Object)adaptor.create(CLOSE_PAREN18);
                    adaptor.addChild(root_0, CLOSE_PAREN18_tree);


                    }
                    break;
                case 2 :
                    // ./CFScript.g:149:3: cfmlBasicStatement
                    {
                    pushFollow(FOLLOW_cfmlBasicStatement_in_codeStatement245);
                    cfmlBasicStatement19=cfmlBasicStatement();
                    _fsp--;

                    adaptor.addChild(root_0, cfmlBasicStatement19.getTree());

                    }
                    break;

            }


            }

            retval.stop = input.LT(-1);

                retval.tree = (Object)adaptor.rulePostProcessing(root_0);
                adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
    traceOut("codeStatement", 4);
        }
        return retval;
    }
    // $ANTLR end codeStatement

    public static class returnStatement_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };
